--- a/r2_simulation_v2-jason.ipynb
+++ b/r2_simulation_v2-jason.ipynb
@@ -2,29 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n%run tictoc.py\\n'"
+       "(1000,)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "%run tictoc.py\n",
-    "\"\"\""
+    "ary = np.zeros((1000,7))\n",
+    "s = ary.sum(axis=1) + np.array([i for i in range(1,1001)])\n",
+    "s3 = pd.Series(s,index=[i for i in range(1,1001)])\n",
+    "ary[:,1] = np.array([i for i in range(1,1001)])\n",
+    "np.shape(np.array([i for i in range(1,1001)]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,17 +45,18 @@
     "    def __init__(self, initial_inventory, sku_cost):\n",
     "        sku_demand_fdc = pd.read_csv('E:/work/GOC/second_round/par_FDC.csv')\n",
     "        sku_demand_rdc = pd.read_csv('E:/work/GOC/second_round/par_RDC_total_sale.csv')\n",
+    "        self.sku_demand_rdc = sku_demand_rdc\n",
     "        sku_demand_rdc['dc_id'] = 0\n",
     "        sku_demand = sku_demand_rdc.append(sku_demand_fdc,sort=True)\n",
     "        self.sku_demand = sku_demand\n",
-    "        self.sku_demand_rdc = sku_demand_rdc\n",
     "        self.inv = initial_inventory\n",
     "        self.costs = sku_cost\n",
     "        self.extra_shipping_cost_per_unit = 0.01\n",
     "        self.fixed_replenish_cost = 0.01\n",
     "        self.sku_limit = np.asarray([200, 200, 200, 200, 200])\n",
     "        self.capacity_limit = np.asarray([3200, 1600, 1200, 3600, 1600])\n",
-    "        self.abandon_rate =np.asarray([1./100, 7./100, 10./100, 9./100, 8./100])\n",
+    "        self.abandon_rate = np.asarray([1./100, 7./100, 10./100, 9./100, 8./100])\n",
+    "        self.intransit = np.zeros((1000,7))\n",
     "        \n",
     "\n",
     "    def daily_decision(self,t):\n",
@@ -74,13 +77,13 @@
     "        sku_demand_rdc = self.sku_demand_rdc\n",
     "        inventory = self.inv\n",
     "        sku_cost = self.costs\n",
+    "        intransit = self.intransit\n",
     "        \n",
     "        \n",
     "        #REPLENISHMENT\n",
-    "        sku_demand_rdc = sku_demand_rdc.set_index('item_sku_id')\n",
-    "        sku_cost = sku_cost.set_index('item_sku_id')\n",
-    "        sku_stock = inventory.set_index('item_sku_id')\n",
-    "        replen_matrix = sku_cost.join(sku_demand_rdc, sort = True)\n",
+    "        sku_demand_rdc = sku_demand_rdc.sort_values(by='item_sku_id').set_index('item_sku_id')\n",
+    "        sku_cost_r = sku_cost.sort_values(by='item_sku_id').set_index('item_sku_id')\n",
+    "        replen_matrix = sku_cost_r.join(sku_demand_rdc, sort = True)\n",
     "        rdc_stock = inventory[inventory['dc_id'] == 0][['item_sku_id','stock_quantity']].sort_values(by='item_sku_id').set_index('item_sku_id')\n",
     "\n",
     "        r_star = 7\n",
@@ -95,36 +98,22 @@
     "            output = m.apply(lambda x: s_star(x.sku_avg, x.sku_std, x.holding_cost, x.stockout_cost), axis = 1)\n",
     "            return output\n",
     "\n",
-    "        def init_replen(s_star, stock):\n",
-    "            if t % r_star != 1:\n",
-    "                return 0\n",
-    "            elif s_star <= stock:\n",
+    "        \n",
+    "        def init_replen(s_star, stock, intransit):\n",
+    "            if s_star <= stock + intransit:\n",
     "                return 0\n",
     "            else:\n",
-    "                return s_star - stock\n",
+    "                return s_star - stock - intransit\n",
+    "            \n",
     "\n",
     "        def replenishment(m,rdc_stock):\n",
-    "            joined = pd.concat([s_star_m(m), rdc_stock], axis=1)\n",
-    "            joined.columns = ['s_star', 'stock_quantity']\n",
-    "            output = joined.apply(lambda x: init_replen(x.s_star, x.stock_quantity), axis = 1)\n",
+    "            joined = pd.concat([s_star_m(m), rdc_stock, pd.Series(intransit.sum(axis=1),index=[i for i in range(1,1001)])], axis=1)\n",
+    "            joined.columns = ['s_star', 'stock_quantity','intransit']\n",
+    "            output = joined.apply(lambda x: init_replen(x.s_star, x.stock_quantity, x.intransit), axis = 1)\n",
+    "            self.intransit[:,(t-1)%r_star] = np.array(output.get_values())\n",
     "            replenish_val = np.reshape(output.get_values(),(1000,1)).T\n",
     "            print(replenish_val.sum(axis=1))\n",
     "            return replenish_val\n",
-    "\n",
-    "#         def replenishment_df(r,inventory):\n",
-    "#             dm_inv = pd.merge(sku_demand_rdc, inventory[inventory['dc_id']==0], how='inner', on='item_sku_id')\n",
-    "#             dm_inv_cost = pd.merge(dm_inv, sku_cost, how='inner', on='item_sku_id')\n",
-    "#             dm_inv_cost['R'] = r\n",
-    "#             dm_inv_cost['alpha'] = 1 - (dm_inv_cost['holding_cost'] * dm_inv_cost['R'])/(dm_inv_cost['holding_cost'] * dm_inv_cost['R'] + dm_inv_cost['stockout_cost'])\n",
-    "#             dm_inv_cost['Z_alpha'] = stats.norm.ppf(dm_inv_cost['alpha'])\n",
-    "#             dm_inv_cost['S'] = dm_inv_cost['sku_avg'] * (dm_inv_cost['R'] + 7) + dm_inv_cost['Z_alpha'] * ((dm_inv_cost['R'] + 7) * (dm_inv_cost['sku_std'] ** 2)) ** 0.5\n",
-    "#             dm_inv_cost['diff'] = dm_inv_cost['S'] - dm_inv_cost['stock_quantity']\n",
-    "#             dm_inv_cost['replenish'] = dm_inv_cost['diff'].apply(lambda x: x if x>0 else 0)\n",
-    "#             replenish_val = np.reshape(dm_inv_cost.sort_values(by='item_sku_id',ascending=True)['replenish'].get_values(),(1000,1)).T\n",
-    "#             return replenish_val\n",
-    "        \n",
-    "        def replenish():\n",
-    "            return np.zeros((1,1000))+100\n",
     "    \n",
     "\n",
     "        #ALLOCATION\n",
@@ -293,7 +282,8 @@
     "            return temp\n",
     "\n",
     "        # 调用函数\n",
-    "        replenish = replenishment(replen_matrix,rdc_stock)\n",
+    "        self.replenish = replenishment(replen_matrix,rdc_stock)\n",
+    "        replenish = self.replenish\n",
     "        #replenish = replenish()\n",
     "        #replenish = replenishment_df(r_star,inventory)\n",
     "        allocation_rdc_r = allocation_rdc(inventory,t)\n",
@@ -327,15 +317,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (<ipython-input-7-fc4f123ab7f0>, line 144)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-fc4f123ab7f0>\"\u001b[1;36m, line \u001b[1;32m144\u001b[0m\n\u001b[1;33m    initial_inventory = pd.read_csv('C:\\Users\\Jiasheng\\Desktop\\personalrepo\\sku_stock.csv')\u001b[0m\n\u001b[1;37m                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[644928.8555906]\n",
+      "[10098.08341479]\n",
+      "[7007.23941132]\n",
+      "[8096.61113838]\n",
+      "[8043.32456055]\n",
+      "[8193.2654458]\n",
+      "[8522.71660339]\n",
+      "[3943.14684368]\n",
+      "[18481.9916575]\n",
+      "[15011.79599802]\n",
+      "[14852.82033799]\n",
+      "[15303.99903426]\n",
+      "[15407.54589593]\n",
+      "[15399.78828722]\n",
+      "[18383.63434339]\n",
+      "[9996.03988675]\n",
+      "[11460.70085867]\n",
+      "[15536.7870285]\n",
+      "[15006.54248123]\n",
+      "[16154.76153207]\n",
+      "[17108.36268345]\n",
+      "[14443.90645925]\n",
+      "[21700.05116287]\n",
+      "[15282.64612769]\n",
+      "[12977.95794061]\n",
+      "[14649.34453035]\n",
+      "[15294.0894425]\n",
+      "[16367.95378478]\n",
+      "[19100.0660076]\n",
+      "[12685.44717675]\n",
+      "[20268.89782112]\n",
+      "score 173109.9658 ordering_cost 129.28 shortage_cost 106263.6187 holding_cost 64784.97710000001 extra_shipping_cost 1932.0900000000001\n"
      ]
     }
    ],
@@ -483,7 +503,7 @@
     "    replenishment_leadtime = 7\n",
     "\n",
     "    # initial on hand inventory\n",
-    "    initial_inventory = pd.read_csv('C:\\Users\\Jiasheng\\Desktop\\personalrepo\\sku_stock.csv')\n",
+    "    initial_inventory = pd.read_csv('E:/work/GOC/second_round/goc_data_2ndround/res/sku_stock.csv')\n",
     "\n",
     "    # maximum daily number of unique products that can be allocated to FDC \n",
     "    sku_limit = np.asarray([200, 200, 200, 200, 200])\n",
@@ -517,12 +537,11 @@
     "    some_policy = UserPolicy(initial_inventory.copy(deep=True), sku_cost.copy(deep=True))\n",
     "\n",
     "    '''run simulation'''\n",
-    "    #tic()\n",
     "    for t in range(1, period_length+1):\n",
     "        inventory_decision = some_policy.daily_decision(t)\n",
     "        update_return = instance.daily_update(inventory_decision, t-1)\n",
     "        if update_return['status']:\n",
-    "            if t <period_length:\n",
+    "            if t < period_length:\n",
     "                # inventory at the end of the day\n",
     "                # tday_inventory = pd.DataFrame([[s, d, instance.inv[d][s-1] ] for d in dc_list for s in sku_list ], \\\n",
     "                #                  columns = ['item_sku_id','dc_id','stock_quantity'])\n",
@@ -543,7 +562,7 @@
     "    #print('score',score)\n",
     "    print('score',score, 'ordering_cost', instance.ordering_cost,'shortage_cost',instance.shortage_cost,'holding_cost',instance.holding_cost,'extra_shipping_cost',instance.extra_shipping_cost)\n",
     "\n",
-    "#toc()\n",
+    "\n",
     "\n"
    ]
   },
@@ -557,13 +576,6 @@
     "1,0,0: score 215805.8732 ordering_cost 81.6 shortage_cost 90093.4615 holding_cost 123431.82170000001 extra_shipping_cost 2198.92\n",
     "1,100,2:score 170348.2431 ordering_cost 81.13999999999999 shortage_cost 110228.58870000001 holding_cost 58161.70439999999 extra_shipping_cost 1876.8099999999995"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
